--- a/dimgem/templates/kontakt.html
+++ b/dimgem/templates/kontakt.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 	{% load static from staticfiles %}
-	<p>Podziękowania dla Moniki za baner! Inne jej projekty oraz zdjęcia znajdziecie <a href="http://www.whiteeyedhusky.pl/" style="color: darkgreen;">tutaj</a></p>
+	<p>Podziękowania dla Moniki za baner! Inne jej projekty oraz zdjęcia znajdziecie <a href="http://www.whiteeyedhusky.pl/" target="_blank" class="outer-link">tutaj</a></p>
 	<p>Zdjęcie do baneru wykonała geodotka w miejscowości Tossa di Mare w Hiszpanii.</p>
-	<div>
+	<div class="contact">
 		<p>A oto i geodotka:</p>
-		<img src="{% static 'dimgem/geodotka.JPG' %}" style="width: 400px; height: 300px" alt="Geodotka" /><br>
+		<img src="{% static 'dimgem/geodotka.JPG' %}" />
 		<p>Angel and demon...</p>
 		<p>To ciekawe, że na zdjęciu geodotka jest duża, a Etna jest mała, gdy tymczasem w rzeczywistości jest na odwrót.</p>
 	</div>
