--- a/dimgem/templates/add_post.html
+++ b/dimgem/templates/add_post.html
@@ -3,7 +3,8 @@
 {% load compress %}
 
 {% block content %}
-	<form enctype="multipart/form-data" method="post" role="form">
+	<h4>Dodaj post</h4>
+	<form enctype="multipart/form-data" method="post" class="form-horizontal" role="form">
 		{% csrf_token %}
 		<div>
 			{% for field in form %}
@@ -30,10 +31,11 @@
 				<label class="col-sm-2 control-label">Autor</label>
 				{{ request.user.username}}
 			</div>
-		</div>
-		<div class="form-group">
-			<div class="col-sm-10">
-				<button type="submit" class="btn btn-default">Zapisz</button>
+			<div class="form-group">
+				<div>
+					<span class="col-sm-2"></span>
+					<button type="submit" class="btn btn-default">Zapisz</button>
+				</div>
 			</div>
 		</div>
 	</form>
