--- a/dimgem/templates/base.html
+++ b/dimgem/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load compress %}
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
@@ -6,10 +7,14 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-	<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/style.css" charset="utf-8">
-
-	<script type="text/javascript" src="{{ STATIC_URL }}js/vendor/jquery-1.10.2.min.js"></script>
+	{% compress css %}
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/style.css" charset="utf-8">
+	{% endcompress %}
+	{% compress js %}
+		<script type="text/javascript" src="{{ STATIC_URL }}js/vendor/jquery-1.10.2.min.js"></script>
+	{% endcompress %}
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
 </head>
 <body overflow="auto">
