--- a/dimgem/templates/waiting_room.html
+++ b/dimgem/templates/waiting_room.html
@@ -108,5 +108,6 @@
 	</div>
 	{% compress js %}
 		<script type="text/coffeescript" src="{{ STATIC_URL }}js/tab_dimgem.coffee"></script>
+		<script type="text/coffeescript" src="{{ STATIC_URL }}js/preview_picture.coffee"></script>
 	{% endcompress %}
 {% endblock %}
