--- a/dimgem/static/css/style.css
+++ b/dimgem/static/css/style.css
@@ -58,11 +58,12 @@ a {
 
 .content {
     margin-top: 10px;
-    margin-bottom: 10px;
+    padding-bottom: 40px;
 }
 
 .footer {
     width: 100%;
+    height: 40px;
     position: absolute;
     bottom: 0;
 }
