--- a/dimgem/templates/dimgem.html
+++ b/dimgem/templates/dimgem.html
@@ -29,7 +29,7 @@
 						Kategoria: {{ post.categories }}
 					</div>
 					<div>
-						{{post.posted_date|date:"d.m.Y"}} {{post.author}}: {{post.title}}
+						{{post.posted_date|date:"d.m.Y"}} {{post.author}}: <a href="{{ post.url }}">{{post.title}}</a>
 					</div>
 				</div>
 				<div class="container-text">
