--- a/dimgem/templates/search.html
+++ b/dimgem/templates/search.html
@@ -25,7 +25,7 @@
 	{% if posts %}
 		{% for post in posts %}
 			<hr>
-			<h4>{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: {{ post.title }}</h4>
+			<h4>{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: <a href="{{ post.url }}">{{ post.title }}</a></h4>
 			{% autoescape off %}
 				<p>{{ post.text|linebreaks|color_searched_word:filter }}</p>
 			{% endautoescape %}
