--- a/dimgem/templates/search.html
+++ b/dimgem/templates/search.html
@@ -8,6 +8,7 @@
 		<div class="form-group">
 			<label for="{{ form.word.id_for_label }}" class="col-sm-3 control-label">{{ form.word.label }}</label>
 			{{ form.word }}
+			{{ form.whole_word }} Tylko całe wyrazy
 			{% if form.word.errors %}
 				{% for error in form.word.errors %}
 					<span class="text-error">{{ error }}</span>
@@ -26,7 +27,7 @@
 			<hr>
 			<h4>{{ post.posted_date|date:"d.m.Y" }} {{ post.author }}: {{ post.title }}</h4>
 			{% autoescape off %}
-				<p>{{ post.text|linebreaks|color_searched_word:word }}</p>
+				<p>{{ post.text|linebreaks|color_searched_word:filter }}</p>
 			{% endautoescape %}
 		{% endfor %}
 	{% else %}
