--- a/dimgem/templates/search.html
+++ b/dimgem/templates/search.html
@@ -32,7 +32,7 @@
 		{% endfor %}
 	{% else %}
 		{% if word %}
-			<p>Brak postów zawierajacych słowo "{{ word }}"</p>
+			<p>Brak postów zawierających słowo "{{ word }}"</p>
 		{% endif %}
 	{% endif %}
 {% endblock %}
