--- a/dimgem/static/css/style.css
+++ b/dimgem/static/css/style.css
@@ -39,13 +39,13 @@ a {
 }
 
 .menu-item {
-    width: 120px;
+    width: 118px;
     border-radius: 20px;
     margin: 20px 0px;
 }
 
 .menu-item-link {
-    width: 100px;
+    width: 98px;
     border-radius: 10px;
     margin: 20px 0px;
 }
@@ -168,4 +168,8 @@ h4 {
 
 .searched-word{
     background: #FFFF00;
+}
+
+.posts-title-form, .posts-title-list {
+	margin: 30px;
 }
